<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title_form"
            android:layout_width="200dp"
            android:layout_height="24dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/lato_black"
            android:gravity="top"
            android:text="@string/form_pengisian_data"
            android:textColor="@color/title_color"
            android:textSize="20sp" />

        <RelativeLayout
            android:id="@+id/rectangle_5"
            android:layout_width="328dp"
            android:layout_height="94dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="16dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="24dp"
            android:background="@color/info_color"
            >

            <TextView
                android:id="@+id/textInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:text="@string/info"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/txtDescriptionInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="42dp"
                android:fontFamily="@font/roboto"
                android:text="@string/description_info"
                android:textColor="@color/description_color"
                android:textSize="12sp" />
        </RelativeLayout>

        <TextView
            android:id="@+id/jenis_tes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="15dp"
            android:text="@string/jenis_tes"
            android:textSize="12dp"
            android:fontFamily="@font/roboto_bold"
            android:gravity="top"
            />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp">
            <RadioButton
                android:id="@+id/radiorapid"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/rapid_test"
                android:checked="true"
                android:buttonTint="@color/radio_button_color"
                />
            <RadioButton
                android:id="@+id/radiopcr"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/pcr"
                android:buttonTint="@color/radio_button_color"
                />
        </RadioGroup>

        <TextView
            android:id="@+id/tanggal_konfirmasi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="15dp"
            android:text="@string/tanggal_konfirmasi"
            android:textSize="12dp"
            android:fontFamily="@font/roboto_bold"
            android:gravity="top"
            />

        <Button
            android:id="@+id/tglkonfirmasi"
            android:layout_width="328dp"
            android:layout_height="wrap_content"
            android:text="@string/pilih_tanggal"
            android:textColor="@color/gray"
            style="?android:spinnerStyle"
            android:layout_marginLeft="15dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tanggal_konfirmasi"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/nik"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="15dp"
            android:text="@string/nik"
            android:textSize="12dp"
            android:fontFamily="@font/roboto_bold"
            android:gravity="top"
            />

        <EditText
            android:id="@+id/editnik"
            android:layout_width="328dp"
            android:layout_height="40dp"
            android:layout_marginLeft="16dp"
            android:paddingLeft="12dp"
            android:maxLength="15"
            android:textSize="14sp"
            android:hint="@string/masukkan_nik"
            android:inputType="textCapWords"
            android:background="@drawable/form_input"/>

        <TextView
            android:id="@+id/nama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="15dp"
            android:text="@string/nama"
            android:textSize="12dp"
            android:fontFamily="@font/roboto_bold"
            android:gravity="top"
            />

        <EditText
            android:id="@+id/editnama"
            android:layout_width="328dp"
            android:layout_height="40dp"
            android:layout_marginLeft="16dp"
            android:paddingLeft="12dp"
            android:maxLength="15"
            android:textSize="14sp"
            android:hint="@string/masukkan_nama"
            android:inputType="textCapWords"
            android:background="@drawable/form_input"/>

        <TextView
            android:id="@+id/tanggal_lahir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="15dp"
            android:text="@string/tanggal_lahir"
            android:textSize="12dp"
            android:fontFamily="@font/roboto_bold"
            android:gravity="top"
            />

        <Button
            android:id="@+id/tgllahir"
            android:layout_width="328dp"
            android:layout_height="wrap_content"
            android:text="@string/pilih_tanggal"
            android:textColor="@color/gray"
            style="?android:spinnerStyle"
            android:layout_marginLeft="15dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tanggal_lahir"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/jenis_kelamin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="15dp"
            android:text="@string/jenis_kelamin"
            android:textSize="12dp"
            android:fontFamily="@font/roboto_bold"
            android:gravity="top"
            />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp">
            <RadioButton
                android:id="@+id/radiolaki2"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/laki2"
                android:checked="true"
                android:buttonTint="@color/radio_button_color"
                />
            <RadioButton
                android:id="@+id/radioperempuan"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/perempuan"
                android:buttonTint="@color/radio_button_color"
                />
        </RadioGroup>

        <TextView
            android:id="@+id/hubungan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="15dp"
            android:text="@string/hubungan"
            android:textSize="12dp"
            android:fontFamily="@font/roboto_bold"
            android:gravity="top"
            />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp">
            <RadioButton
                android:id="@+id/orangtua"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/orangtua"
                android:checked="true"
                android:buttonTint="@color/radio_button_color"
                />
            <RadioButton
                android:id="@+id/suamiistri"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/suamiistri"
                android:buttonTint="@color/radio_button_color"
                />
            <RadioButton
                android:id="@+id/anak"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/anak"
                android:buttonTint="@color/radio_button_color"
                />
            <RadioButton
                android:id="@+id/lainnya"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/lainnya"
                android:buttonTint="@color/radio_button_color"
                />
        </RadioGroup>

        <CheckBox
            android:layout_width="328dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="36dp"
            android:text="@string/checkbox"
            android:buttonTint="@color/radio_button_color"
            android:checked="true"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnselanjutnya"
            android:layout_width="328dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:layout_marginLeft="10dp"
            android:text="@string/selanjutnya"
            android:textColor="@color/white"
            android:background="@drawable/bg_button"
            app:strokeWidth="2dp">

        </androidx.appcompat.widget.AppCompatButton>
    </LinearLayout>
</ScrollView>